# opf-organizer

./: README.md  pyproject.toml  requirements.txt
opf_organizer/: __init__.py  __main__.py  exc.py  main.py  organize.py  organizer.py  resources.py
opf_organizer/cmd/: organize.py
