[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "opf_organizer"
author = "Lars Kellogg-Stedman"
author-email = "lars@redhat.com"
home-page = "https://github.com/larsks/opf_organizer"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
description-file = "README.md"

[tool.flit.scripts]
opf-organizer = "opf_organizer.main:main"
